--- a/style.css
+++ b/style.css
@@ -107,13 +107,17 @@ a {
   padding-left: 20px;
   font-size: 18px;
   font-family: montserrat;
+  border-radius: 20px 20px 0 0;
 }
 .notice-container-header > * {
   margin-right: 5px;
 }
 
 .news-header {
-  background-image: linear-gradient(#f57f1c, rgb(230 230 230));
+  background-image: linear-gradient(to right, #f57f1c, rgb(230 230 230));
+}
+.notices-header {
+  background-image: linear-gradient(to right, #f57f1c, rgb(230 230 230));
 }
 
 /* === notice end === */
