--- a/style.css
+++ b/style.css
@@ -401,21 +401,58 @@ a {
   background-image: url(../img/testimonial-bg.jpg);
   background-attachment: fixed;
   background-position: center center;
-  padding: 100px;
+  padding: 100px 0;
   background-size: cover;
   position: relative;
 }
 
 .testimonial-container {
-  width: 85%;
-  padding: 10%;
+  padding: 0 10%;
+  margin: auto;
+}
+
+.dark-layer {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.6);
+  height: 100%;
+  width: 100%;
+}
+
+.testimonial-quote-container {
+  width: 840px;
+  /* height: 200px; */
+  background-color: #333333;
+  margin: auto;
+  padding: 60px 30px;
+}
+
+.testimonial-quote {
+  z-index: 100;
+}
+.testimonial-quote > p {
+  color: white;
+  font-size: 16px;
 }
 
 /*  === testimonial ends === */
-/*  === Moments starts === */
-/*  === Moments starts === */
-/*  === Moments starts === */
-/*  === Moments starts === */
-/*  === Moments starts === */
-/*  === Moments starts === */
-/*  === Moments starts === */
+/*  === Footer starts === */
+
+.footer-top {
+  background-color: #333333;
+  color: white;
+  padding: 100px 0;
+}
+.footer-container {
+  width: 85%;
+  margin: auto;
+  display: flex;
+  justify-content: space-evenly;
+}
+.footer-container > * {
+  width: 20%;
+  padding: 0 15px;
+}
+
+/*  === Footer ends === */
